@@ -4,6 +4,10 @@ PluggableAuthService changelog
 PluggableAuthService 1.5.4 (Unreleased)
 ---------------------------------------
 
+- Launchpad #273680: _verifyUser() for Anonymous could result in very
+  expensive lookup of all users for some implementations,
+  eg. Membrane.
+
 - Ensure the _findUser cache is invalidated if the roles or groups for
   a principal change.
 
